# F1tenth

./: README.md  index.html
Figures/: README.md
HMI/: CMakeLists.txt  Documentation-HMI.odt  Images  InterfaceROS-0208.py  InterfaceROS-1007.py  InterfaceROS-2607.py  InterfaceROS-sauv.py  InterfaceROS_30.06.2017.py  package.xml
HMI/Sauv/: InterfaceROS-1007-version2607.py  InterfaceROS.py  osm.xml
control1/: CMakeLists.txt  Purepursuit.md  package.xml
control1/launch/: Untitled Document  launch1.launch  launch_sim_pp_pid.launch
control1/src/: PID_Velocity.py  PurePursuit.py  PurePursuit_class.py  PurePursuite.py  Waypoints.py  car_model.py  error_calc.py  haha.py  kill_switch.py  mocap_dummy.py  mocap_publisher.py  mocap_source_2.py  pid.py  plot_test.py  serial_transmitter.py
f1tenth_localization/: CMakeLists.txt  package.xml  package.xml~  reach_instructions.md
f1tenth_localization/bag/: 2017-07-07-10-27-27.bag  2017-07-07-14-59-04.bag  2017-07-07-15-00-34.bag  2017-07-07-15-01-35.bag  2017-07-07-15-07-53.bag  2017-07-07-15-07-58.bag  localization_output.bag  mocap_bag1.bag  mocap_bag3.bag  mocap_imu_bag1.bag  reach_and_imu.bag
f1tenth_localization/info/: robot_localization_info.aux  robot_localization_info.tex
f1tenth_localization/launch/: ekf_gps_imu.launch  ekf_launch.launch  ekf_mocap_imu.launch  gps_from_bag.launch  gps_from_bag.launch~  launch_qualisys.launch  launch_qualisys.launch~  play_mocap_bag.launch  qualisys_imu.launch  rosbag_mocap.launch  rosbag_mocap.launch~  rosbag_mocap_dual.launch  rosbag_mocap_realImu.launch  rviz_with_mocap_and_imu.launch
f1tenth_localization/msg/: gps_data.msg~  gps_reach.msg  test_gps_message.msg~
f1tenth_localization/params/: ekf_parameters_gps.yaml  ekf_parameters_mocap.yaml  gpslog1.txt  gpslog2.txt  imu_ekf.yaml  rosbag_mocap.yaml  rosbag_mocap_realimu.yaml
f1tenth_localization/rviz/: imu_and_gps.rviz  imu_and_mocap.rviz  imu_and_qualisys.rviz
f1tenth_localization/src/: dummy_localization.py  ekf_node.py  filtered_gps.py  get_gps_string.py~  (+13 more)
f1tenth_obstacle_avoidance/: README.md
hmi/: CMakeLists.txt  Documentation-HMI.odt  package.xml
obstacle_avoidance/: README.md
obstacle_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml~
obstacle_detection2/: CMakeLists.txt  package.xml
sensor_helpers/: CMakeLists.txt  imu_calibration_instructions.md  package.xml
slip_control_communications/: CMakeLists.txt  package.xml
slip_control_communications/msg/: conversion.msg  input_drive.msg  input_model.msg  input_pid.msg  mocap_data.msg  out_pursuit.msg  pose.msg  pose_and_references.msg
(+45 files in other folders)
