<?xml version="1.0"?>
<package>
  <name>control1</name>
  <version>0.0.0</version>
  <description> Package for tracking and traveling a circular trajectory with the use of a pid controller </description>

  <maintainer email="arc@todo.todo">arc</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>slip_control_communications</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>slip_control_communications</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
