<?xml version="1.0"?>
<package>
  <name>slip_control_communications</name>
  <version>0.0.0</version>
  <description>Msg files for slip control</description>
 <maintainer email="p@e.com">p</maintainer>

  <license>BSD</license>

  <author>p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
